2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, include/bsp.h, include/tm27.h,
	trap34/console-io.c: Now builds cleanly for runs for SH1, SH2, and
	SH4.
	* include/syscall.h: New file.
	* include/gdbsci.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove noinst_PROGRAMS (Unused).

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds: GDB Simulator has 16MB RAM.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Now runs using fake clock ticker.
	* clock/clockdrv.c: Removed.

2008-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clockdrv.c: Fix comment.

2008-09-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, clock/clockdrv.c, include/bsp.h,
	start/start.S, startup/linkcmds: Now runs ticker and hello on
	sh-rtems4.10-gdb. The SH simulator in gdb has no hardware IO or
	interrupt simulation so we use the trap interface to print.
	* gdbsci/gdbsci.c: Removed.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, startup/linkcmds, startup/linkcmds.sim: Use top level
	shared bsp_get_work_area() implementation.

2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>
